# OnePiece-Catalysis

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  OVERHAUL_NOTES.md  README.md  RELEASING.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: Makefile
docs/presentation/: pfui_onboarding_slides.tex  pfui_onboarding_speaking_notes.tex  pfui_ui_developer_feedback.tex
docs/reports/catalysis_hub_master_report/: catalysis_hub_master_report.aux  catalysis_hub_master_report.md  catalysis_hub_master_report.out  catalysis_hub_master_report.tex
docs/reports/xarray_vasp_homework/: xarray_vasp_homework.aux  xarray_vasp_homework.md  xarray_vasp_homework.tex
docs/source/: api_usage.md  architecture_for_ase_catalysis.md  artifact_policy.md  ase_structures_in_dataframes.md  ase_to_ui_workflow_mapping.md  ase_user_guide.md  backend_overview.md  bundled_hdf_backend_tutorial.md  catalysis_hub_worked_example.md  changelog.md  co2rr_methanol_reference_tutorial.md  column_review.md  conf.py  crawl_to_hdf_backend.md  cuga_worked_example.md  dataframe_schema.md  electrochemical_oer_tutorial.md  fair_and_provenance.md  first_day_student.md  from_notebook_to_fair_dataset.md  function_inventory.md  image_columns.md  index.md  load_first_lab_dataset.md  logos.md  materials_workbench_design.md  onepiece_backend_api.md  onepiece_studio_architecture.md  pandas_ase.md  published_dft_data_intake.md  quality_control.md  recommended_analysis_views.md  release_workflow.md  troubleshooting.md  tutorial.md  vasp_charge_and_dos.md  visualization_recipes.md  xarray_vasp.md
docs/source/_static/: custom.css  onepiece_function_inventory.md
examples/: chapter6_adsorption_streamlit.py  created_frame_streamlit.py  cuga_full_streamlit.py  demo_streamlit.py
notebooks/: README.md  build_cuga_gcn_charge_magmom_plots.py  build_cuga_surface_phase_diagrams.py  build_cuga_worked_example.py  build_transition_multiplot_tables.py  create_catalysis_hub_onepiece_notebook.py  create_created_frame_phd_analysis_notebooks.py  create_onepiece_phase_tutorial_notebooks.py  rewrite_cuga_muO_tutorial_notebook.py
notebooks/adsorption_barrier_software/: 01_adsorption_energy_and_barrier_software.ipynb  README.md  create_adsorption_barrier_notebook.py  run_adsorption_barrier_analysis.py
notebooks/adsorption_barrier_software/outputs/: adsorption_energy_view.csv  copt_barrier_points.csv  copt_barrier_summary.csv  gas_references.pkl  surface_references.csv
notebooks/catalysis_hub_tutorial/: 01_catalysis_hub_onepiece_analysis.ipynb  README.md  build_catalysis_hub_worked_example.py
notebooks/catalysis_hub_tutorial/outputs/: catalysis_hub_co2_adsorption_parity.csv  (+1 more)
notebooks/chapter6_adsorption_tutorial/: 01_onepiece_adsorption_energy_CO_CH3OH.ipynb  README.md  chapter6_adsorption_workflow.py  create_chapter6_adsorption_tutorial.py
notebooks/created_frame_phd_analysis/: 00_dataset_atlas_created_frame.ipynb  01_convergence_and_materials_taxonomy.ipynb  02_adsorbate_chemistry_and_reference_energies.ipynb  03_local_structure_descriptors_and_coordination.ipynb  04_reaction_pathways_and_copt_landscapes.ipynb  05_curated_methanol_reaction_path.ipynb  06_cu211_ga_methanol_mechanism_step_by_step.ipynb  README.md
notebooks/onepiece_phase_tutorial/: 00_hdf_onepiece_pandas_ase_intro.ipynb  01_bulk_phase_table_from_hdf.ipynb  02_surface_phase_tables_from_hdf.ipynb  03_multiplot_transition_tables.ipynb  README.md
notebooks/phase_diagram_outputs/: cuga_bulk_reference_candidates.csv  cuga_bulk_reference_hull.csv  cuga_bulk_surface_phase_comparison_summary.csv  cuga_bulk_surface_transition_phase_multiplot.html  cuga_bulk_surface_transition_phase_summary.csv  cuga_bulk_surface_transition_phase_summary_extended.csv  cuga_full_dataset.pkl  cuga_stable_bulk_phases_teaching.csv  cuga_surface_100_plot_candidates.csv  cuga_surface_100_stable_phases.csv  cuga_surface_110_plot_candidates.csv  cuga_surface_110_stable_phases.csv  cuga_surface_111_plot_candidates.csv  cuga_surface_111_stable_phases.csv  cuga_surface_211_plot_candidates.csv  cuga_surface_211_stable_phases.csv  cuga_surface_all_stable_phases.csv  cuga_surface_phase_comparison_summary.csv  cuga_surface_phase_diagrams.html
reports/: create_catalysis_hub_master_report.py  markdown_to_pdf_report.py
scripts/: generate_xarray_vasp_homework.py  init_desktop_chapter6_project.py  init_desktop_created_frame_project.py  make_adsorption_ui_demo_gif.py  release_check.py
src/onepiece/: __init__.py  _compat.py  _polars.py  adsorption.py  ase_analysis.py  automation.py  dftdataframe_import.py  frame_utils.py  ir.py  phase_diagrams.py  provenance.py  qa.py  storage.py  thermo.py  vasp.py  xarray_vasp.py
src/onepiece_studio/: adapters.py  config.py  demo.py  schema.py
tests/: test_adsorption.py  test_adsorption_modules.py  test_ase_analysis.py  test_cli.py  test_dataset_service.py  test_dftdataframe_import.py  test_docstring_examples.py  test_full_ui_audit.py  test_hdf_reading.py  test_ir.py  test_local_default_source.py  test_package_qa.py  test_packaging_split.py  test_phase_diagrams.py  test_polars_utils.py  test_provenance.py  test_public_api.py  test_sources_core.py  test_storage.py  test_ui_workflow_state.py  test_vasp.py  test_welcome.py  test_welcome_app_flow.py  test_workflow_provenance.py  test_xarray_vasp.py
thesis/: build_thesis_figures.py  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.tex  main.toc  references.bib
thesis/tables/: dataset_summary.csv  top_transition_phases.csv
ui/: MANIFEST.in  README.md  pyproject.toml
ui/src/onepiece_studio/: __init__.py  adapters.py  cli.py  filter_logic.py  images.py  materials_columns.py  schema.py  state.py  workflow_logic.py
ui/src/onepiece_studio/ui/: adsorption.py  controlroom.py  data_management.py  data_sources.py  records.py  row_actions.py  streamlit_app.py  visualize.py  welcome.py  workflow_automation.py  workflow_builder.py  workflow_session.py  workflow_steps.py
(+30 files in other folders)
