[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onepiece"
version = "1.0.0"
description = "Backend package for local scientific dataframe workflows with ASE, thermochemistry, adsorption, and VASP analysis."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Claude Coppex", email = "claude.coppex@kit.edu" }
]
maintainers = [
  { name = "Claude Coppex", email = "claude.coppex@kit.edu" }
]
keywords = [
  "materials-science",
  "computational-chemistry",
  "pandas",
  "ase",
  "surface-science",
  "catalysis",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=16.0",
  "tables>=3.8",
  "sympy>=1.12",
  "ase>=3.22",
  "xarray>=2024.1",
]

[project.optional-dependencies]
performance = [
  "polars>=1.0",
]
studio = [
  "pillow>=10.0",
  "streamlit>=1.36",
  "plotly>=5.20",
  "polars>=1.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]
dev = [
  "bandit>=1.9",
  "pre-commit>=3.7",
  "pytest>=8.0",
  "ruff>=0.4",
  "pillow>=10.0",
  "streamlit>=1.36",
  "plotly>=5.20",
  "polars>=1.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]
release = [
  "build>=1.2",
  "check-manifest>=0.51",
  "twine>=5.1",
  "validate-pyproject>=0.25",
]
docs = [
  "sphinx>=7.3",
  "furo>=2024.8.6",
  "myst-parser>=3.0",
  "playwright>=1.45",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["onepiece", "onepiece.*"]

[tool.setuptools.package-data]
onepiece = ["data/*.hdf"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.bandit]
exclude_dirs = ["tests", "docs/build", "docs/reports"]
skips = ["B101"]
