[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onepiece"
version = "1.0.1"
description = "Backend package for local scientific dataframe workflows with ASE, thermochemistry, adsorption, and VASP analysis."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name = "Claude Coppex", email = "claude.coppex@kit.edu" }
]
maintainers = [
  { name = "Claude Coppex", email = "claude.coppex@kit.edu" }
]
keywords = [
  "materials-science",
  "computational-chemistry",
  "pandas",
  "ase",
  "surface-science",
  "catalysis",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=2.2.6",
  "pandas>=2.3.3",
  "pyarrow>=24.0.0",
  "tables>=3.10.1",
  "sympy>=1.14.0",
  "ase>=3.28.0",
  "xarray>=2025.6.1",
]

[project.optional-dependencies]
performance = [
  "polars>=1.41.2",
]
studio = [
  "pillow>=12.2.0",
  "streamlit>=1.58.0",
  "plotly>=6.8.0",
  "polars>=1.41.2",
  "matplotlib>=3.10.9",
  "seaborn>=0.13.2",
]
dev = [
  "bandit>=1.9.4",
  "pre-commit>=4.6.0",
  "pytest>=9.1.1",
  "ruff>=0.15.18",
  "pillow>=12.2.0",
  "streamlit>=1.58.0",
  "plotly>=6.8.0",
  "polars>=1.41.2",
  "matplotlib>=3.10.9",
  "seaborn>=0.13.2",
]
release = [
  "build>=1.5.0",
  "check-manifest>=0.51",
  "twine>=6.2.0",
  "validate-pyproject>=0.25",
]
docs = [
  "sphinx>=8.1.3",
  "furo>=2025.12.19",
  "myst-parser>=4.0.1",
  "playwright>=1.60.0",
  "matplotlib>=3.10.9",
  "seaborn>=0.13.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["onepiece", "onepiece.*"]

[tool.setuptools.package-data]
onepiece = ["data/*.hdf"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.bandit]
exclude_dirs = ["tests", "docs/build", "docs/reports"]
skips = ["B101"]
